fix: avoid ugly text overflow in tweets

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -334,6 +334,7 @@ header .ls-furkot
 
     .text
       clear both
+      overflow-wrap break-word
 
     .photo,
     .video
